--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -167,7 +167,7 @@
  HAS_NOT_IDEA_ALLOWING:1 "「$WHICH$」が可能なアイデアを取得していない。\n"
  HAS_IDEA_ALLOWING:1 "「$WHICH$」が可能なアイデアを取得している。\n"
  OPPOSE_NEXT_REFORM:1 "利用可能なすべての改革に反対する。"
- WANTS_NEXT_REFORM:1 "Wants at least one of the available reforms."
+ WANTS_NEXT_REFORM:1 "利用可能な改革の少なくとも1つを要望している。"
  HAVE_LESS_THAN_ADM_POWER:0 "統治力が右記未満："
  HAVE_MORE_THAN_ADM_POWER:0 "統治力が右記以上："
  HAVE_LESS_THAN_DIP_POWER:0 "外交力が右記未満："
@@ -646,8 +646,8 @@
  DISABLE_COUNCIL_OF_TRENT:0 "§Yトリエント公会議§!の終わり\n"
  HAVE_LESS_OWNED_AREAS_THAN:0 "地域が$VALUE|Y$未満である"
  HAVE_MORE_OWNED_AREAS_THAN:0 "地域の数が$VALUE|Y$以上である"
- HAS_NOT_FEATURE_ALLOWING:1 "Do NOT have feature allowing '$WHICH$'.\n"
- HAS_FEATURE_ALLOWING:1 "Has feature allowing '$WHICH$'.\n"
+ HAS_NOT_FEATURE_ALLOWING:1 "「$WHICH$」を可能にする機能がない。\n"
+ HAS_FEATURE_ALLOWING:1 "「$WHICH$」を可能にする機能がある。\n"
  TOTAL_HAS_NOT_MORE_PRIVATEERS:0 "$WHERE|Y$における私掠船が交易力の§Y$VAL$§!未満である。"
  TOTAL_HAS_SAME_OR_MORE_PRIVATEERS:0 "$WHERE|Y$における私掠船が交易力の§Y$VAL$§!以上である。"
  HAVE_LESS_REGIMENT_TYPE_THAN_PERC:2 "$TYPE$連隊が軍の$PERC|%Y$未満である（$NUM|Y$）"
@@ -659,7 +659,7 @@
  COSSACKS_REGIMENT_TYPE:0 "コサック"
  JANISSARIES_REGIMENT_TYPE:0 "イェニチェリ"
  RAJPUT_REGIMENT_TYPE:0 "ラージプート"
- ESTATE_LOAN_DESC:0 " An Estate of yours provides this loan."
+ ESTATE_LOAN_DESC:0 "あなたの階級がこの借金を提供します。"
  IS_REBEL_TYPE_TRIGGER:0 "$TYPE|Y$の反乱軍である。\n"
  IS_NOT_REBEL_TYPE_TRIGGER:0 "$TYPE|Y$の反乱軍ではない。\n"
  EFFECT_GAIN_POWER_PROJECTION:0 "$TAG|Y$は戦力投射を$AMOUNT|G$得ます。"
