--- a/source/localisation/tutorial_l_english.yml
+++ b/source/localisation/tutorial_l_english.yml
@@ -331,11 +331,11 @@
  TUT_CAM_CHAPTER02_PAGE15_TEXT:0 "アイデアグループは自国の§M統治技術§!に応じた特定の間隔で選択できます。ちょうど今研究した技術が2番目のアイデアグループを解除しました。アイデアグループは国家を専門化し、特定の作業を行う上でよりユニークかつ強力にします。"
  TUT_CAM_CHAPTER02_PAGE15_OBJECTIVES:0 "§Mアイデアタブ§!を開いてください。"
  TUT_CAM_CHAPTER02_PAGE16_TITLE:0 "§Yアイデアグループ（17/19）§!"
- TUT_CAM_CHAPTER02_PAGE16_TEXT:0 "アイデアグループのアイデアを解除するには、§M統治力§!、§M外交力§!、§M軍事力§!のいずれかの§M君主力400§!が消費されます。どの君主力が消費されるかはアイデアグループによって決まります。備蓄が潤沢な種類の君主点を消費するアイデアグループを選ぶことをおすすめします。\n\n§Y§M開放されたスロット§!ボタンをクリックし、§M探検アイデア§!を選択してください。§W"
+ TUT_CAM_CHAPTER02_PAGE16_TEXT:0 "アイデアグループのアイデアを取得するには、§M統治力§!、§M外交力§!、§M軍事力§!のいずれかの§M君主力400§!が消費されます。どの君主力が消費されるかはアイデアグループによって決まります。備蓄が潤沢な種類の君主点を消費するアイデアグループを選ぶことをおすすめします。\n\n§Y§M開放されたスロット§!ボタンをクリックし、§M探検アイデア§!を選択してください。§W"
  TUT_CAM_CHAPTER02_PAGE16_OBJECTIVES:0 "§M探検§!アイデアグループを選択してください。"
  TUT_CAM_CHAPTER02_PAGE17_TITLE:0 "§Yアイデア（18/19）§!"
- TUT_CAM_CHAPTER02_PAGE17_TEXT:0 "3つのアイデアを解除すると、§M国策§!が1つ解除されます。殆どの大国と幾つかの小国は固有の国策を持っています。\n\n§M新世界の探索§Yは§M探検§Yアイデアグループに含まれるアイデアで、§M探検家§Yと§M征服者§Yを募集できるようになります。これは最初に§M植民地探検§Yのアイデアを解除する必要があります。"
- TUT_CAM_CHAPTER02_PAGE17_OBJECTIVES:0 "§M新世界の探索§!アイデアを解除してください。"
+ TUT_CAM_CHAPTER02_PAGE17_TEXT:0 "3つのアイデアを取得すると、§M国策§!が1つ有効になります。殆どの大国と幾つかの小国は固有の国策を持っています。\n\n§M新世界の探索§Yは§M探検§Yアイデアグループに含まれるアイデアで、§M探検家§Yと§M征服者§Yを募集できるようになります。これは最初に§M植民地探検§Yのアイデアを取得する必要があります。"
+ TUT_CAM_CHAPTER02_PAGE17_OBJECTIVES:0 "§M新世界の探索§!アイデアを取得してください。"
  TUT_CAM_CHAPTER02_PAGE18_TITLE:0 "§Y章のおわりに（19/19）§!"
  TUT_CAM_CHAPTER02_PAGE18_TEXT:0 "これでスペイン帝国キャンペーンのスペイン宗教裁判の章を終わります。"
  TUT_CAM_CHAPTER02_PAGE18_OBJECTIVES:0 "§M次へ§!をクリックして次の章へ。"
