Save/Update files [ci skip]

--- a/source/localisation/eldorado_l_english.yml
+++ b/source/localisation/eldorado_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
  exploration_events.1.t:0 "$PROVINCENAME$における試練"
- exploration_events.1.d:0 "植民できる地域を見つけるという我々の使命は、$PROVINCENAME$でつまづいた。原住民たちは我々に敵対的だが、土地は非常に繁栄している。我々はこの地域との交易から多くを得られるだろう。ただ、首長か、二番目の者あたりを買収する必要があるかもしれないが..."
+ exploration_events.1.d:0 "植民できる地域を見つけるという我々の使命は、$PROVINCENAME$でつまづいた。原住民たちは我々に敵対的だが、土地は非常に繁栄している。我々はこの地域との交易から多くを得られるだろう。ただ、首長か、二番目の者あたりを買収する必要があるかもしれないが…"
  exploration_events.1.a:0 "彼らに公平な取引をしよう。"
  exploration_events.1.b:0 "彼らに不公平な取引をしよう。"
  exploration_events.2.t:0 "$PROVINCENAME$騎兵隊"
@@ -58,7 +58,7 @@
  exploration_events.16.a:0 "我らは最初の世界一周者だ！"
  exploration_events.17.t:0 "二番目の世界一周"
  exploration_events.17.d:0 "我らの世界一周は人類発ではなかったが、それでも偉業を達成したことに変わりはなく、全国が我らを祝福してくれるだろう！"
- exploration_events.17.a:0 "素晴らしい業績だ。まあ、世界初ではないとはいえ..."
+ exploration_events.17.a:0 "素晴らしい業績だ。まあ、世界初ではないとはいえ…"
  exploration_events.18.d:0 "我々の艦隊は、ヨーロッパの豊かな都市への航路を見つけるために航海を行った。アフリカの先端近くにある喜望峰を発見した後、彼らは99日かけて海を西へと横断した。\n\n艦隊の船長は、地元の族長がライバルの部族を征服するのを助ける際に、毒矢の傷により死亡したが、我々の船のうち2隻が生き残り、1隻は海を横断して帰還しようとしたが沈んでしまった。最後の船は西への航海を続け、太平洋を横断して航行し、我々の港に到着したとき、それは地球を一周した最初の船となった。"
  exploration_events.19.d:0 "我々の艦隊は、インドネシアの豊かな香料諸島への西周り航路を発見するために航海を行った。彼らは、南アメリカの先端近くに位置するマゼラン海峡を発見し、99日かけて海を西へ横断した。海峡は危険であり、最終的に大洋に到着すると、船長は喜んで涙を流した。\n\n艦隊の船長は、セブ島の族長がライバルの部族を征服するのを助ける際に、毒矢の傷により死亡した。我々の船のうち2隻が生き残り、1隻は太平洋を横断して帰還しようとしたが沈んでしまった。最後の船は西への航海を続け、インド洋を横断して航行し、我々の港に到着したとき、それは地球を一周した最初の船となった。"
  exploration_events.20.d:0 "我々の艦隊は、伝説の豊かな島々と西方の都市への西周り航路を発見するために航海を行った。インドネシアの島々を発見した後、海を西に横断するのに多くの日数がかかった。\n\n艦隊の船長は、地元の族長がライバルの部族を征服するのを助ける際に、毒矢の傷により死亡した。我々の船のうち2隻が生き残り、1隻は外洋を横断して帰還しようとしたが沈んでしまった。最後の船は西への航海を続け、インド洋を横断して航海し、喜望峰を周ってそれが我々の港に到着したとき、それは地球を一周した最初の船となった。"
@@ -122,7 +122,7 @@
  seven_cities_events.104.a:0 "兵士を連れて、その征服者を探しに行こう！"
  seven_cities_events.104.b:0 "遅かれ早かれ、そのうち帰ってくるさ。"
  seven_cities_events.105.t:0 "長い豚"
- seven_cities_events.105.d:0 "遠征隊は$PROVINCENAME$で小さく友好的な部族と出会い、近隣の部族に勝ったことを祝う祭りに招かれた。たくさんの「長い豚」と呼ぶらしい肉が振舞われ、コンキスタドールはそれを食べてみて確かに豚肉のような味がすると感じた。...祝宴が終わる前に、遠征隊はその肉の原材料を説明された。敵の強さを自らに取り込むために、敗れた部族の捕虜を生贄としてささげ、その肉を食べていたというのだ..."
+ seven_cities_events.105.d:0 "遠征隊は$PROVINCENAME$で小さく友好的な部族と出会い、近隣の部族に勝ったことを祝う祭りに招かれた。たくさんの「長い豚」と呼ぶらしい肉が振舞われ、コンキスタドールはそれを食べてみて確かに豚肉のような味がすると感じた。…祝宴が終わる前に、遠征隊はその肉の原材料を説明された。敵の強さを自らに取り込むために、敗れた部族の捕虜を生贄としてささげ、その肉を食べていたというのだ…"
  seven_cities_events.105.a:0 "このことについては口をつぐめ！"
  seven_cities_events.105.b:0 "コンキスタドールが沈黙を貫いてくれることを祈ろう。"
  seven_cities_events.200.t:0 "エル・ドラド－神話"
@@ -282,7 +282,7 @@
  seven_cities_events.401.d:0 "大声で淫乱な歌を歌い、ボトルからウィスキーをがぶ飲みする姿を発見された二人の男は明らかに犯罪を犯していた。義務を負っている間にウィスキーを盗み、それを飲んでしまうとは - 何とプロの精神に反していることか！彼らは軍法会議で裁かれ、鞭打ちを宣告され、その後解放された。"
  seven_cities_events.401.a:0 "彼らは鞭打ちを受けるべきではなかった！"
  seven_cities_events.401.b:0 "それは彼らに教訓を教えてくれた！"
- seven_cities_events.401.c:0 "おそらくこれは彼らを彼らの目標から大きく遠ざけるものではないだろう..."
+ seven_cities_events.401.c:0 "おそらくこれは彼らを彼らの目標から大きく遠ざけるものではないだろう…"
  seven_cities_events.402.t:0 "ペラルタ金鉱"
  seven_cities_events.402.d:0 "$PROVINCENAME$の血なまぐさい大虐殺は、原住民が日常的に黄金の探検家たちを攻撃したとき、ペラルタ族の生存者をほとんど残さなかった。生き残った人々は、我々の征服者と探検隊の兵士の助けを借りることを懇願し、彼らの一族が復讐を果たした場合、多くの黄金を支払うことを約束した。"
  seven_cities_events.402.a:0 "彼らが必要とするものは何でも - 我々が黄金を得られる限り！"
