--- a/source/localisation/generic_events_l_english.yml
+++ b/source/localisation/generic_events_l_english.yml
@@ -1360,7 +1360,7 @@
  EVTOPTA5064:0 "彼らは裏切りの対価を支払うことになるだろう。"
  EVTOPTB5064:0 "我々は後でそれらに対処する。"
  EVTNAME5065:0 "貴族の暗殺"
- EVTDESC5065:1 "貴族は我々の権力の防壁である。しかし、彼らは統一した力ではなく、影響力と権力をめぐって互いに絶え間ない闘争に封じ込められている。時が経つにつれ、貴族の家々の中には財産を大きく膨らませる者もいれば、すべての権力を失う人もおり、結果として得られた羨望は、激しい競争と非難へと繋がる。最近、強力な貴族一家の指導者である[Root.assassinated_dude.GetName]がライバルたちによって暗殺されたことで、これらのライバルたちが完全な紛争へと巻き込まれた。怒り狂った彼の生き残った親族たちは激しい復讐を準備している..."
+ EVTDESC5065:1 "貴族は我々の権力の防壁である。しかし、彼らは統一した力ではなく、影響力と権力をめぐって互いに絶え間ない闘争に封じ込められている。時が経つにつれ、貴族の家々の中には財産を大きく膨らませる者もいれば、すべての権力を失う人もおり、結果として得られた羨望は、激しい競争と非難へと繋がる。最近、強力な貴族一家の指導者である[Root.assassinated_dude.GetName]がライバルたちによって暗殺されたことで、これらのライバルたちが完全な紛争へと巻き込まれた。怒り狂った彼の生き残った親族たちは激しい復讐を準備している…"
  EVTOPTA5065:0 "彼ら自身で解決させよう。"
  EVTOPTB5065:0 "この状況を制御しよう。"
  EVTNAME5066:0 "教会機能の停止"
@@ -1380,7 +1380,7 @@
  EVTOPTA5071:0 "彼らの要求を受け入れよう。"
  EVTOPTB5071:0 "彼らの要求を拒否しよう。"
  EVTNAME5072:0 "輸出免許を付与"
- EVTDESC5072:1 "貴族に現金を支払う代わりの別の選択肢は、例えば外国との交易から彼らが健全な利益を得ることができる特別な収入を集める特権を彼らに与えることだ。[neighbour_country.GetUsableName]との交易でいくつかの貴族の一族に輸出勅許を付与する提案が[Root.Monarch.GetTitle]の耳に届いた。そうすることは彼らを大いに喜ばせるだろうが、商人階級は問題をあまり好ましくないものと見るかもしれない..."
+ EVTDESC5072:1 "貴族に現金を支払う代わりの別の選択肢は、例えば外国との交易から彼らが健全な利益を得ることができる特別な収入を集める特権を彼らに与えることだ。[neighbour_country.GetUsableName]との交易でいくつかの貴族の一族に輸出勅許を付与する提案が[Root.Monarch.GetTitle]の耳に届いた。そうすることは彼らを大いに喜ばせるだろうが、商人階級は問題をあまり好ましくないものと見るかもしれない…"
  EVTOPTA5072:0 "特権を付与する。"
  EVTOPTB5072:0 "特権は受けるに値する者にだけ与えられるべきだ。"
  EVTNAME5073:0 "新たな土地への請求"
@@ -3401,7 +3401,7 @@
  EVTNAME9479:0 "憲法の復元"
  EVTDESC9479:0 "この国の政府の改革は憲法に反しており、違法である。我々は立憲君主制の復活を求めている。"
  EVTOPTA9479:0 "もう忘れたらどうだ。"
- EVTOPTB9479:0 "おっと、そんなことを言うなら..."
+ EVTOPTB9479:0 "おっと、そんなことを言うなら…"
  EVTNAME9480:0 "最悪の行き過ぎを止める"
  EVTDESC9480:0 "$COUNTRY$において、問題は徐々に正常に戻りつつある。今日では、宗教的信念を告白すること、あるいは非十進法の暦を支持することさえ、ほとんど安全である。理性の眠りは悪魔を生み出すが、大部分の悪魔のために創設されたカルトは、理性を崇拝する目的を表明したものであったかもしれない。"
  EVTOPTA9480:0 "おそらくそれが最良だ。"
@@ -3530,7 +3530,7 @@
  EVTOPTA712:0 "この助言に従う。"
  EVTOPTB712:0 "誰が経済を気にするのだ？"
  EVTNAME713:0 "退廃"
- EVTDESC713:1 "我が国が現在経験している平和と繁栄は、人々を楽にし、幸せで安全な気分になることを可能にした。これは彼らが慣れるに従って成長する可能性のあるものだ...過去の困難はますます想像できないものとなっており、人々は一般的に時の経過とともに怠惰となり生産性を低下させている。"
+ EVTDESC713:1 "我が国が現在経験している平和と繁栄は、人々を楽にし、幸せで安全な気分になることを可能にした。これは彼らが慣れるに従って成長する可能性のあるものだ…過去の困難はますます想像できないものとなっており、人々は一般的に時の経過とともに怠惰となり生産性を低下させている。"
  EVTOPTA713:0 "我々には変革が必要だ。"
  EVTNAME714:0 "軍事対立！"
  EVTDESC714:1 "軍の対立する派閥は異なる戦術を提唱している。我々は、それらのうちの一つを支持して、争いを終わらせる必要がある。"
@@ -3818,7 +3818,7 @@
  random_event.EVTOPTA9:0 "要塞を妨害するよう彼に要請する！"
  random_event.EVTOPTB9:1 "[enemy_country.Mil_Advisor.GetSheHe]が奴らのために建設したものを知るべきだ！"
  random_event.EVTNAME10:0 "貪欲な海賊たち"
- random_event.EVTDESC10:2 "最も恐れる私掠船長である[Root.Dip_Advisor.GetName]は、敵の船が戦利品と栄光に対する[Root.Dip_Advisor.GetHerHis]の欲望を満たすには不十分であると判断しており、[Root.Dip_Advisor.GetSheHe]はあなたの商船団を攻撃し始めた。商人は[Root.Dip_Advisor.GetHerHis]の首を刎ねるよう求めているが、財務担当者は、消耗した国庫がいくつかの余分な金から利益を得られるとして、[Root.Dip_Advisor.GetHerHim]との間に合意を見出すことができると提案している。結局のところ、実際に[Root.Dip_Advisor.GetWomanMan]は信頼できる顧問なのだ..."
+ random_event.EVTDESC10:2 "最も恐れる私掠船長である[Root.Dip_Advisor.GetName]は、敵の船が戦利品と栄光に対する[Root.Dip_Advisor.GetHerHis]の欲望を満たすには不十分であると判断しており、[Root.Dip_Advisor.GetSheHe]はあなたの商船団を攻撃し始めた。商人は[Root.Dip_Advisor.GetHerHis]の首を刎ねるよう求めているが、財務担当者は、消耗した国庫がいくつかの余分な金から利益を得られるとして、[Root.Dip_Advisor.GetHerHim]との間に合意を見出すことができると提案している。結局のところ、実際に[Root.Dip_Advisor.GetWomanMan]は信頼できる顧問なのだ…"
  random_event.EVTOPTA10:0 "我々は商人を守り、欲張りな連中を沈めなければならぬ！"
  random_event.EVTOPTB10:0 "金は臭くない、そうだな？"
  random_event.EVTNAME11:0 "外国の軍事専門家"
@@ -3898,7 +3898,7 @@
  colonial_nation.EVTOPTB1:0 "関税を下げることを受け入れる。"
  colonial_nation.EVTNAME2:0 "関税の増加"
  colonial_nation.EVTDESC2:0 "我々の抗議にもかかわらず、[Root.ColonialParent.GetName]は一時的に厳しい関税を課しており、これは我々の経済を疲弊させるだろう。"
- colonial_nation.EVTOPTA2:0 "抗議を続けるのだ..."
+ colonial_nation.EVTOPTA2:0 "抗議を続けるのだ…"
  colonial_nation.EVTNAME3:0 "関税の減少"
  colonial_nation.EVTDESC3:0 "[Root.ColonialParent.GetName]は、その理由を聞き、ゆっくりと我々の経済を絞め付けていた関税を一時的に下げることを決断した。"
  colonial_nation.EVTOPTA3:0 "良い知らせだ！"
