--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -537,7 +537,7 @@
  ISSUETHROUGHPARLIAMENT_BTN3:0 "移動"
  ISSUETHROUGHPARLIAMENT_MAP:0 "$ISSUE$"
  ISSUEFAILED_TITLE:0 "議題が議会で否決"
- ISSUEFAILED_SETUP:0 "議会で議論が失敗した場合。"
+ ISSUEFAILED_SETUP:0 "議会で議論が失敗した時"
  ISSUEFAILED_HEADER:0 "宰相からの報告"
  ISSUEFAILED_1:0 "議論の失敗!"
  ISSUEFAILED_2:0 "議会は以下の議題を否決しました。"
@@ -681,7 +681,7 @@
  FUTURECARDINALDEAD_BTN2:0 "OK"
  FUTURECARDINALDEAD_BTN3:0 "移動"
  FUTURECARDINALLOYALTYSTOP_TITLE:0 "枢機卿はもはや忠実ではありません。"
- FUTURECARDINALLOYALTYSTOP_SETUP:0 "かつて我々に忠実な枢機卿が彼の忠誠を変える時。"
+ FUTURECARDINALLOYALTYSTOP_SETUP:0 "かつて我々に忠実な枢機卿が彼の忠誠を変える時"
  FUTURECARDINALLOYALTYSTOP_HEADER:0 "聖座からの便り"
  FUTURECARDINALLOYALTYSTOP_1:0 "枢機卿はもはや我々に忠実ではありません!"
  FUTURECARDINALLOYALTYSTOP_2:0 "悲しいことに、$NAME$は$LOYALNAME$に忠誠を誓うことに変更しました。"
@@ -1151,7 +1151,7 @@
  FORMCOALITIONJOINREJECTOTHER_BTN3:0 "移動"
  ENFORCEPEACEREQ:0 "$ACTOR$はあなたに対して$TARGET$との白紙和平を要求しています。さもなくばあなたに対して参戦すると言っています!"
  ENFORCEPEACEACCEPT_TITLE:0 "強制和平の受諾"
- ENFORCEPEACEACCEPT_SETUP:0 "国家があなたの強制和平を受諾した場合。"
+ ENFORCEPEACEACCEPT_SETUP:0 "国家があなたの強制和平を受諾した時"
  ENFORCEPEACEACCEPT_HEADER:0 "使者"
  ENFORCEPEACEACCEPT_1:0 "$RECIPIENT$"
  ENFORCEPEACEACCEPT_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
@@ -1238,7 +1238,7 @@
  INTERVENE_SAME_SIDE_BTN2:0 "OK"
  INTERVENE_SAME_SIDE_BTN3:0 "移動"
  INTERVENE_OTHER_SIDE_TITLE:0 "戦争への介入"
- INTERVENE_OTHER_SIDE_SETUP:0 "誰かが敵国側で我々の戦争に介入する場合。"
+ INTERVENE_OTHER_SIDE_SETUP:0 "誰かが敵国側で我々の戦争に介入する時"
  INTERVENE_OTHER_SIDE_HEADER:0 "$MESSENGER$"
  INTERVENE_OTHER_SIDE_1:0 "$MONARCHTITLE$"
  INTERVENE_OTHER_SIDE_2:1 "列強$ACTORS$が"
@@ -1308,7 +1308,7 @@
  INFILTRATEADMINME_BTN2:0 "OK"
  INFILTRATEADMINME_BTN3:0 "移動"
  INFILTRATEADMINTHEM_TITLE:0 "政府への潜入"
- INFILTRATEADMINTHEM_SETUP:0 "他国が我々の政府に潜入した場合。"
+ INFILTRATEADMINTHEM_SETUP:0 "他国が我々の政府に潜入した時"
  INFILTRATEADMINTHEM_HEADER:0 "$MESSENGER$"
  INFILTRATEADMINTHEM_1:0 "政府への潜入"
  INFILTRATEADMINTHEM_2:0 "$MONARCHTITLE$、"
@@ -2288,7 +2288,7 @@
  ROYMARACCEPTOTHER_BTN2:0 "OK"
  ROYMARACCEPTOTHER_BTN3:0 "移動"
  ROYMARREJECTOTHER_TITLE:0 "王室間の婚姻の拒否"
- ROYMARREJECTOTHER_SETUP:0 "国家は他の国からの王室間の婚姻の提案を拒否した場合。"
+ ROYMARREJECTOTHER_SETUP:0 "国家は他の国からの王室間の婚姻の提案を拒否した時"
  ROYMARREJECTOTHER_HEADER:0 "使者"
  ROYMARREJECTOTHER_1:0 "$RECIPIENT$"
  ROYMARREJECTOTHER_2:0 "$MONARCHTITLE$、$RECIPIENT$は"
@@ -3419,7 +3419,7 @@
  DISBAND_BTN3:0 "移動"
  DISBAND_MAP:0 "ユニットが解散"
  COLONYDAMAGED_TITLE:0 "原住民によって植民地が損害を受けました。"
- COLONYDAMAGED_SETUP:0 "我々の植民地の一つが原住民によって損害を受けた場合。"
+ COLONYDAMAGED_SETUP:0 "我々の植民地の一つが原住民によって損害を受けた時"
  COLONYDAMAGED_HEADER:0 "$MESSENGER$"
  COLONYDAMAGED_1:0 "植民地が損害を受けました。"
  COLONYDAMAGED_2:0 "$MONARCHTITLE$、"
@@ -4050,7 +4050,7 @@
  ENDWARSUBSIDIES_BTN2:0 "OK"
  ENDWARSUBSIDIES_BTN3:0 "移動"
  ENDKNOWLEDGESHARE_TITLE:0 "知識共有の終了"
- ENDKNOWLEDGESHARE_SETUP:0 "知識共有を終了する時。"
+ ENDKNOWLEDGESHARE_SETUP:0 "知識共有を終了する時"
  ENDKNOWLEDGESHARE_HEADER:0 "$MESSENGER$"
  ENDKNOWLEDGESHARE_1:0 "知識共有は終了します。"
  ENDKNOWLEDGESHARE_2:0 "$MONARCHTITLE$、"
@@ -6103,7 +6103,7 @@
  TRADE_RELATION_ACCEPT_BTN2:0 "OK"
  TRADE_RELATION_ACCEPT_BTN3:0 "移動"
  STEER_TRADE_RELATION_CANCEL_TITLE:0 "交易誘導をキャンセル"
- STEER_TRADE_RELATION_CANCEL_SETUP:0 "国家が交易誘導をキャンセルする時。"
+ STEER_TRADE_RELATION_CANCEL_SETUP:0 "国家が交易誘導をキャンセルする時"
  STEER_TRADE_RELATION_CANCEL_HEADER:0 "交易誘導はキャンセルされました"
  STEER_TRADE_RELATION_CANCEL_1:0 "$THEM$"
  STEER_TRADE_RELATION_CANCEL_2:0 "以下に対する交易を誘導しません："
@@ -6114,7 +6114,7 @@
  STEER_TRADE_RELATION_CANCEL_BTN2:0 "よし"
  STEER_TRADE_RELATION_CANCEL_BTN3:0 "移動"
  STEER_TRADE_RELATION_ACCEPT_TITLE:0 "交易誘導を受け入れた"
- STEER_TRADE_RELATION_ACCEPT_SETUP:0 "国家が交易誘導の関係を受け入れる時。"
+ STEER_TRADE_RELATION_ACCEPT_SETUP:0 "国家が交易誘導の関係を受け入れる時"
  STEER_TRADE_RELATION_ACCEPT_HEADER:0 "交易関係は受け入れられました"
  STEER_TRADE_RELATION_ACCEPT_1:0 "$THEM$"
  STEER_TRADE_RELATION_ACCEPT_2:0 "以下に対する交易を誘導するでしょう："
@@ -6148,7 +6148,7 @@
  ASK_PROT_DECLINE_BTN2:0 "悲しいことだ。"
  ASK_PROT_DECLINE_BTN3:0 "移動"
  DESIGNATE_MARCH_TITLE:0 "属国の辺境伯任命"
- DESIGNATE_MARCH_SETUP:0 "属国が宗主国によって辺境伯に任命された時。"
+ DESIGNATE_MARCH_SETUP:0 "属国が宗主国によって辺境伯に任命された時"
  DESIGNATE_MARCH_HEADER:0 "辺境伯が任命されました。"
  DESIGNATE_MARCH_1:0 "かつての属国"
  DESIGNATE_MARCH_2:0 "$MARCH$"
@@ -6186,7 +6186,7 @@
  ASK_FOR_MARCH_DENIED_BTN2:0 "最悪だ"
  ASK_FOR_MARCH_DENIED_BTN3:0 "移動"
  CENTEROFREFORMCONVERT_TITLE:0 "州が改宗された"
- CENTEROFREFORMCONVERT_SETUP:1 "改革の中心地あるいは宗教の中心地がそれらの信仰を広めた時。"
+ CENTEROFREFORMCONVERT_SETUP:1 "改革の中心地あるいは宗教の中心地がそれらの信仰を広めた時"
  CENTEROFREFORMCONVERT_HEADER:0 "$MESSENGER$"
  CENTEROFREFORMCONVERT_1:0 "改宗に成功！"
  CENTEROFREFORMCONVERT_2:0 "$MONARCHTITLE$、"
@@ -6199,7 +6199,7 @@
  CENTEROFREFORMCONVERT_BTN2:0 "OK"
  CENTEROFREFORMCONVERT_BTN3:0 "移動"
  CENTEROFREFORMDONE_TITLE:0 "改宗が完了"
- CENTEROFREFORMDONE_SETUP:1 "改革の中心地あるいは宗教の中心地が、それらの信仰を広めることを完了した時。"
+ CENTEROFREFORMDONE_SETUP:1 "改革の中心地あるいは宗教の中心地が、それらの信仰を広めることを完了した時"
  CENTEROFREFORMDONE_HEADER:0 "$MESSENGER$"
  CENTEROFREFORMDONE_1:0 "改宗が完了！"
  CENTEROFREFORMDONE_2:0 "$MONARCHTITLE$、$CENTER$は"
@@ -6223,7 +6223,7 @@
  CENTEROFREFORMREMOVE_BTN2:0 "OK"
  CENTEROFREFORMREMOVE_BTN3:0 "移動"
  RELIGIOUSCENTERREMOVE_TITLE:0 "宗教の中心地が有効ではない"
- RELIGIOUSCENTERREMOVE_SETUP:0 "宗教の中心地が有効でなくなった時。"
+ RELIGIOUSCENTERREMOVE_SETUP:0 "宗教の中心地が有効でなくなった時"
  RELIGIOUSCENTERREMOVE_HEADER:0 "$MESSENGER$"
  RELIGIOUSCENTERREMOVE_1:0 "我々の"
  RELIGIOUSCENTERREMOVE_2:1 "$NODE|Y$の交易ノードにおける"
@@ -6465,7 +6465,7 @@
  BREAKALLIANCE_DECLINED_BTN2:0 "最悪だ"
  BREAKALLIANCE_DECLINED_BTN3:0 "移動"
  OVERLORD_DEVELOPED_SUBJECT_PROVINCE_TITLE:0 "我々の宗主国は我々の州を開発しました。"
- OVERLORD_DEVELOPED_SUBJECT_PROVINCE_SETUP:0 "国家がその従属国の州を開発した時。"
+ OVERLORD_DEVELOPED_SUBJECT_PROVINCE_SETUP:0 "国家がその従属国の州を開発した時"
  OVERLORD_DEVELOPED_SUBJECT_PROVINCE_HEADER:0 "宗主国は我々の州を開発した。"
  OVERLORD_DEVELOPED_SUBJECT_PROVINCE_1:0 "$OVERLORD$"
  OVERLORD_DEVELOPED_SUBJECT_PROVINCE_2:0 "我々の州である$PROVINCENAME$を開発し、"
@@ -6551,7 +6551,7 @@
  FORCED_SEPPUKU_MESSAGE_BTN1:0 "OK"
  FORCED_SEPPUKU_MESSAGE_BTN2:0 "OK"
  PRESS_SAILORS_MESSAGE_TITLE:0 "母国が我が国の水兵を徴発した！"
- PRESS_SAILORS_MESSAGE_SETUP:0 "自国の水兵が母国によって徴発された時。"
+ PRESS_SAILORS_MESSAGE_SETUP:0 "自国の水兵が母国によって徴発された時"
  PRESS_SAILORS_MESSAGE_HEADER:0 "$MESSENGER$"
  PRESS_SAILORS_MESSAGE_1:1 "水兵を徴発された！"
  PRESS_SAILORS_MESSAGE_2:1 "$OVERLORD|Y$から来た士官が$SAILORS|Y$£icon_sailors£を彼らの海軍に従事させるため徴発した。"
@@ -6573,7 +6573,7 @@
  TRIBUTARYACCEPT_BTN2:0 "素晴らしい！"
  TRIBUTARYACCEPT_BTN3:0 "移動"
  TRIBUTARYREJECT_TITLE:0 "朝貢国を拒否した"
- TRIBUTARYREJECT_SETUP:0 "国家が自国の朝貢国の提案を拒否した時。"
+ TRIBUTARYREJECT_SETUP:0 "国家が自国の朝貢国の提案を拒否した時"
  TRIBUTARYREJECT_HEADER:0 "使者"
  TRIBUTARYREJECT_1:0 "$RECIPIENT$"
  TRIBUTARYREJECT_2:0 "$MONARCHTITLE$、$RECIPIENT$"
@@ -6586,7 +6586,7 @@
  TRIBUTARYREJECT_BTN2:0 "OK"
  TRIBUTARYREJECT_BTN3:0 "移動"
  TRIBUTARYACCEPTOTHER_TITLE:0 "朝貢国化の受諾"
- TRIBUTARYACCEPTOTHER_SETUP:0 "国家が別の国家の朝貢国となる時。"
+ TRIBUTARYACCEPTOTHER_SETUP:0 "国家が別の国家の朝貢国となる時"
  TRIBUTARYACCEPTOTHER_HEADER:0 "使者"
  TRIBUTARYACCEPTOTHER_1:0 "$ACTOR$"
  TRIBUTARYACCEPTOTHER_2:0 "$MONARCHTITLE$ "
@@ -6598,7 +6598,7 @@
  TRIBUTARYACCEPTOTHER_BTN2:0 "OK"
  TRIBUTARYACCEPTOTHER_BTN3:0 "移動"
  TRIBUTARYREJECTOTHER_TITLE:0 "朝貢国を拒否した"
- TRIBUTARYREJECTOTHER_SETUP:0 "国家が別の国家の朝貢国となることを拒否した時。"
+ TRIBUTARYREJECTOTHER_SETUP:0 "国家が別の国家の朝貢国となることを拒否した時"
  TRIBUTARYREJECTOTHER_HEADER:0 "使者"
  TRIBUTARYREJECTOTHER_1:0 "$ACTOR$"
  TRIBUTARYREJECTOTHER_2:0 "$MONARCHTITLE$ "
@@ -6610,7 +6610,7 @@
  TRIBUTARYREJECTOTHER_BTN2:0 "OK"
  TRIBUTARYREJECTOTHER_BTN3:0 "移動"
  TRIBUTARYWEREJECT_TITLE:0 "朝貢国を拒否した"
- TRIBUTARYWEREJECT_SETUP:0 "我々が他国の朝貢国となることを拒否する時。"
+ TRIBUTARYWEREJECT_SETUP:0 "我々が他国の朝貢国となることを拒否する時"
  TRIBUTARYWEREJECT_HEADER:0 "$MESSENGER$"
  TRIBUTARYWEREJECT_1:0 "朝貢国を拒否した！"
  TRIBUTARYWEREJECT_2:0 "$MONARCHTITLE$、我々は当然のことながら、"
@@ -6623,7 +6623,7 @@
  TRIBUTARYWEREJECT_BTN2:0 "OK"
  TRIBUTARYWEREJECT_BTN3:0 "移動"
  TRIBUTARYWEACCEPT_TITLE:0 "朝貢国化の受諾"
- TRIBUTARYWEACCEPT_SETUP:0 "我々が別の国家の朝貢国となることに同意した時。"
+ TRIBUTARYWEACCEPT_SETUP:0 "我々が別の国家の朝貢国となることに同意した時"
  TRIBUTARYWEACCEPT_HEADER:0 "$MESSENGER$"
  TRIBUTARYWEACCEPT_1:0 "朝貢国だ！"
  TRIBUTARYWEACCEPT_2:0 "$MONARCHTITLE$、一時的な措置として我々は、"
@@ -6636,7 +6636,7 @@
  TRIBUTARYWEACCEPT_BTN2:0 "OK"
  TRIBUTARYWEACCEPT_BTN3:0 "移動"
  TRIBUTARYBREAKOTHER_TITLE:0 "朝貢関係が取り消された"
- TRIBUTARYBREAKOTHER_SETUP:0 "国家が朝貢関係を取り消した時。"
+ TRIBUTARYBREAKOTHER_SETUP:0 "国家が朝貢関係を取り消した時"
  TRIBUTARYBREAKOTHER_HEADER:0 "使者"
  TRIBUTARYBREAKOTHER_1:0 "$ACTOR$"
  TRIBUTARYBREAKOTHER_2:0 "$MONARCHTITLE$、$ACTOR$は"
@@ -6649,7 +6649,7 @@
  TRIBUTARYBREAKOTHER_BTN2:0 "OK"
  TRIBUTARYBREAKOTHER_BTN3:0 "移動"
  TRIBUTARYBREAK_TITLE:0 "朝貢関係が取り消された"
- TRIBUTARYBREAK_SETUP:0 "国家が我々との朝貢関係を取り消した時。"
+ TRIBUTARYBREAK_SETUP:0 "国家が我々との朝貢関係を取り消した時"
  TRIBUTARYBREAK_HEADER:0 "$MESSENGER$"
  TRIBUTARYBREAK_1:0 "朝貢関係は破棄された！"
  TRIBUTARYBREAK_2:0 "$MONARCHTITLE$、$ACTOR$は"
@@ -6660,7 +6660,7 @@
  TRIBUTARYBREAK_BTN2:0 "OK"
  TRIBUTARYBREAK_BTN3:0 "移動"
  WETRIBUTARYBREAK_TITLE:0 "朝貢関係が取り消された"
- WETRIBUTARYBREAK_SETUP:0 "我々が朝貢関係を取り消した時。"
+ WETRIBUTARYBREAK_SETUP:0 "我々が朝貢関係を取り消した時"
  WETRIBUTARYBREAK_HEADER:0 "$MESSENGER$"
  WETRIBUTARYBREAK_1:0 "朝貢関係は破棄された！"
  WETRIBUTARYBREAK_2:0 "我々は、我々自身と"
@@ -6673,7 +6673,7 @@
  WETRIBUTARYBREAK_BTN2:0 "OK"
  WETRIBUTARYBREAK_BTN3:0 "移動"
  ASK_FOR_TRIBUTARY_ACCEPT_TITLE:0 "朝貢国の要求が受け入れられた"
- ASK_FOR_TRIBUTARY_ACCEPT_SETUP:0 "国家が朝貢国となる要求を受け入れる時。"
+ ASK_FOR_TRIBUTARY_ACCEPT_SETUP:0 "国家が朝貢国となる要求を受け入れる時"
  ASK_FOR_TRIBUTARY_ACCEPT_HEADER:0 "使者"
  ASK_FOR_TRIBUTARY_ACCEPT_1:0 "$RECIPIENT$"
  ASK_FOR_TRIBUTARY_ACCEPT_2:0 "彼らは、我々を"
@@ -6684,7 +6684,7 @@
  ASK_FOR_TRIBUTARY_ACCEPT_BTN2:0 "素晴らしい！"
  ASK_FOR_TRIBUTARY_ACCEPT_BTN3:0 "移動"
  ASK_FOR_TRIBUTARY_DENIED_TITLE:0 "朝貢国となる要求が拒否された"
- ASK_FOR_TRIBUTARY_DENIED_SETUP:0 "国家が彼らの朝貢国になる我々の要求を拒否した時。"
+ ASK_FOR_TRIBUTARY_DENIED_SETUP:0 "国家が彼らの朝貢国になる我々の要求を拒否した時"
  ASK_FOR_TRIBUTARY_DENIED_HEADER:0 "朝貢国の要求は拒否された"
  ASK_FOR_TRIBUTARY_DENIED_1:0 "$RECIPIENT$"
  ASK_FOR_TRIBUTARY_DENIED_2:0 "は、"
@@ -6694,7 +6694,7 @@
  ASK_FOR_TRIBUTARY_DENIED_BTN2:0 "最悪だ"
  ASK_FOR_TRIBUTARY_DENIED_BTN3:0 "移動"
  TRIBUTE_REFUSED_TITLE:0 "貢物を送ることを拒否した"
- TRIBUTE_REFUSED_SETUP:0 "我々の朝貢国の一つが貢物を送ることを拒否する時。"
+ TRIBUTE_REFUSED_SETUP:0 "我々の朝貢国の一つが貢物を送ることを拒否する時"
  TRIBUTE_REFUSED_HEADER:0 "宰相からの報告"
  TRIBUTE_REFUSED_1:0 "§Y$ACTOR$§!は何の貢物も送らない！ "
  TRIBUTE_REFUSED_2:0 "我々の朝貢国である$ACTOR$は"
@@ -6706,7 +6706,7 @@
  TRIBUTE_REFUSED_BTN2:0 "最悪だ"
  TRIBUTE_REFUSED_BTN3:0 "移動"
  TRIBUTE_TEMP_CHANGED_TITLE:0 "今年の貢物の変更"
- TRIBUTE_TEMP_CHANGED_SETUP:0 "我々の朝貢国の一つが必要な貢物を支払うことができない時。"
+ TRIBUTE_TEMP_CHANGED_SETUP:0 "我々の朝貢国の一つが必要な貢物を支払うことができない時"
  TRIBUTE_TEMP_CHANGED_HEADER:0 "宰相からの報告"
  TRIBUTE_TEMP_CHANGED_1:0 "§Y$ACTOR$§!は$FIRSTTYPE|Y$の貢物を送ることができなかった！"
  TRIBUTE_TEMP_CHANGED_2:0 "我々の朝貢国である$ACTOR$は"
@@ -6718,7 +6718,7 @@
  TRIBUTE_TEMP_CHANGED_BTN2:0 "最悪だ"
  TRIBUTE_TEMP_CHANGED_BTN3:0 "移動"
  TRIBUTE_CHANGED_TITLE:0 "貢物の変更"
- TRIBUTE_CHANGED_SETUP:0 "我々の朝貢国の一つが選択された種類の貢物を送ることができない時。"
+ TRIBUTE_CHANGED_SETUP:0 "我々の朝貢国の一つが選択された種類の貢物を送ることができない時"
  TRIBUTE_CHANGED_HEADER:0 "宰相からの報告"
  TRIBUTE_CHANGED_1:0 "§Y$ACTOR$§!はもはや、$FIRSTTYPE|Y$の貢物を送ることができません！"
  TRIBUTE_CHANGED_2:0 "我々の朝貢国である$ACTOR$は"
@@ -6730,7 +6730,7 @@
  TRIBUTE_CHANGED_BTN2:0 "最悪だ"
  TRIBUTE_CHANGED_BTN3:0 "移動"
  OVERLORD_CHANGED_TRIBUTE_TITLE:0 "貢物の変更"
- OVERLORD_CHANGED_TRIBUTE_SETUP:0 "我々の宗主国が、彼らが要求する貢物を変更した時。"
+ OVERLORD_CHANGED_TRIBUTE_SETUP:0 "我々の宗主国が、彼らが要求する貢物を変更した時"
  OVERLORD_CHANGED_TRIBUTE_HEADER:0 "使者"
  OVERLORD_CHANGED_TRIBUTE_1:0 "$OVERLORD$"
  OVERLORD_CHANGED_TRIBUTE_2:0 "は、彼らの要求する貢物を変更することを決断しました。"
@@ -6743,7 +6743,7 @@
  OVERLORD_CHANGED_TRIBUTE_BTN2:0 "OK"
  OVERLORD_CHANGED_TRIBUTE_BTN3:0 "移動"
  INVALID_TRADING_POLICY_TITLE:0 "交易政策が変更された！"
- INVALID_TRADING_POLICY_SETUP:0 "交易政策がもはや維持可能でなくなり、デフォルトに変更された時。"
+ INVALID_TRADING_POLICY_SETUP:0 "交易政策がもはや維持可能でなくなり、デフォルトに変更された時"
  INVALID_TRADING_POLICY_HEADER:0 "商人からの報告"
  INVALID_TRADING_POLICY_1:0 "$NAME|Y$における"
  INVALID_TRADING_POLICY_2:0 "$NAME|Y$"
@@ -6983,7 +6983,7 @@
  MINORITY_EXPULSION_CANCELED_BTN3:0 "移動"
  BANKLOAN_4:0 "$ESTATE_INFO$"
  DECIMPERIALREALMWARWITHUS_TITLE:0 "皇帝が帝国戦争を要求"
- DECIMPERIALREALMWARWITHUS_SETUP:0 "皇帝が帝国の敵に対する帝国戦争を呼びかける時。"
+ DECIMPERIALREALMWARWITHUS_SETUP:0 "皇帝が帝国の敵に対する帝国戦争を呼びかける時"
  DECIMPERIALREALMWARWITHUS_HEADER:0 "使者"
  DECIMPERIALREALMWARWITHUS_1:0 "$ACTOR$"
  DECIMPERIALREALMWARWITHUS_2:0 "は、彼らの皇帝としての権力において"
@@ -6994,14 +6994,14 @@
  DECIMPERIALREALMWARWITHUS_BTN2:0 "OK"
  DECIMPERIALREALMWARWITHUS_BTN3:0 "移動"
  DECIMPERIALREALMWARWITHOTHER_TITLE:0 "皇帝が帝国戦争を要求"
- DECIMPERIALREALMWARWITHOTHER_SETUP:0 "皇帝が帝国の敵に対する帝国戦争を呼びかける時。"
+ DECIMPERIALREALMWARWITHOTHER_SETUP:0 "皇帝が帝国の敵に対する帝国戦争を呼びかける時"
  DECIMPERIALREALMWARWITHOTHER_HEADER:0 "使者"
  DECIMPERIALREALMWARWITHOTHER_1:0 "$ACTOR$"
  DECIMPERIALREALMWARWITHOTHER_2:0 "は、彼らの皇帝としての権力において"
  DECIMPERIALREALMWARWITHOTHER_3:0 "$RECIPIENT$に対する帝国戦争を宣言し、"
  DECIMPERIALREALMWARWITHOTHER_4:0 "今、戦争の準備のための5年間を持っています"
  DECIMPERIALREALMWARWITHOTHER_5:0 ""
- DECIMPERIALREALMWARWITHOTHER_6:0 "これは確実にヨーロッパを揺るがすでしょう..."
+ DECIMPERIALREALMWARWITHOTHER_6:0 "これは確実にヨーロッパを揺るがすでしょう…"
  DECIMPERIALREALMWARWITHOTHER_LOG:0 "$ACTOR$は$RECIPIENT$に対する帝国戦争を宣言しました！"
  DECIMPERIALREALMWARWITHOTHER_BTN1:0 "OK"
  DECIMPERIALREALMWARWITHOTHER_BTN2:0 "OK"
@@ -7019,7 +7019,7 @@
  REVOLUTION_SPREAD_BTN2:0 "OK"
  REVOLUTION_SPREAD_BTN3:0 "移動"
  REVOLUTION_SPREAD_ZEAL_TITLE:0 "革命思想の広がり"
- REVOLUTION_SPREAD_ZEAL_SETUP:0 "我々が革命思想を敵の州に広げる時。"
+ REVOLUTION_SPREAD_ZEAL_SETUP:0 "我々が革命思想を敵の州に広げる時"
  REVOLUTION_SPREAD_ZEAL_HEADER:0 "$MESSENGER$"
  REVOLUTION_SPREAD_ZEAL_1:0 "革命思想の広がり"
  REVOLUTION_SPREAD_ZEAL_2:0 "$MONARCHTITLE$、"
@@ -7031,22 +7031,22 @@
  REVOLUTION_SPREAD_ZEAL_BTN2:0 "OK"
  REVOLUTION_SPREAD_ZEAL_BTN3:0 "移動"
  WEGAINDOFTIER_TITLE:0 "信仰の擁護者のレベル上昇"
- WEGAINDOFTIER_SETUP:0 "我々が信仰の擁護者のより高いレベルに上がる時。"
+ WEGAINDOFTIER_SETUP:0 "我々が信仰の擁護者のより高いレベルに上がる時"
  WEGAINDOFTIER_HEADER:0 "$MESSENGER$"
  WEGAINDOFTIER_1:0 "$RELIGION$信仰における影響力の増加"
  WEGAINDOFTIER_2:0 "真の信仰の旗の下に他の兄弟たちが加わりました。 信仰の擁護者としての我々の影響力は大幅に増加します。"
  WEGAINDOFTIER_3:0 "$EFFECT$"
- WEGAINDOFTIER_LOG:0 "我々が信仰の擁護者のより高いレベルに上がった時。"
+ WEGAINDOFTIER_LOG:0 "我々は信仰の擁護者のより高いレベルに上がりました。"
  WEGAINDOFTIER_BTN1:0 "OK"
  WEGAINDOFTIER_BTN2:0 "OK"
  WEGAINDOFTIER_BTN3:0 "移動"
  WELOSEDOFTIER_TITLE:0 "信仰の擁護者のレベル低下"
- WELOSEDOFTIER_SETUP:0 "我々の信仰の擁護者のレベルが下がる時。"
+ WELOSEDOFTIER_SETUP:0 "我々の信仰の擁護者のレベルが下がる時"
  WELOSEDOFTIER_HEADER:0 "$MESSENGER$"
  WELOSEDOFTIER_1:0 "$RELIGION$信仰における影響力の低下"
  WELOSEDOFTIER_2:0 "複数の国家における宗教的支配を失ったことで、信仰の擁護者としての我々の影響力は大幅に減少します。"
  WELOSEDOFTIER_3:0 "$EFFECT$"
- WELOSEDOFTIER_LOG:0 "我々の信仰の擁護者のレベルが下がった時。"
+ WELOSEDOFTIER_LOG:0 "我々の信仰の擁護者のレベルが下がりました。"
  WELOSEDOFTIER_BTN1:0 "OK"
  WELOSEDOFTIER_BTN2:0 "OK"
  WELOSEDOFTIER_BTN3:0 "移動"
