--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -168,7 +168,7 @@
  VASSAL_EFF_EXPL:0 "属国からの収入は以下の要因により補正されています：\n"
  COLON_EFF_EXPL:0 "植民地からの収入は以下の要因により補正されています：\n"
  LEDGER_COUNTRY_INCOME:0 "収入比較"
- NEWCOLONIALCOUNTRY_SETUP:0 "国家の海外州から植民地国家が形成された時。"
+ NEWCOLONIALCOUNTRY_SETUP:0 "国家の海外州から植民地国家が形成された時"
  NEWCOLONIALCOUNTRY_HEADER:0 "$MESSENGER$"
  NEWCOLONIALCOUNTRY_1:0 "新たな植民地国家！"
  NEWCOLONIALCOUNTRY_2:0 "$NAME$"
@@ -210,7 +210,7 @@
  SUBJECT_SHOW_RELEASE_COLONY_DESC:0 "もし望むなら、あなたはこの国家としてもプレイを続けることができます。"
  LIBERATE_COLONY:0 "植民地の解放"
  LIBERATE_COLONY_DESC:0 "§Y$COUNTRY$§Wは以下の州を解放します：$LIST$\n"
- RELEASEDCOLONY_SETUP:0 "植民地がかつての宗主国から解放された時。"
+ RELEASEDCOLONY_SETUP:0 "植民地がかつての宗主国から解放された時"
  RELEASEDCOLONY_HEADER:0 "$MESSENGER$"
  RELEASEDCOLONY_1:0 "もはや植民地ではない！"
  RELEASEDCOLONY_2:0 "$NAME$"
