--- a/source/localisation/powers_and_ideas_l_english.yml
+++ b/source/localisation/powers_and_ideas_l_english.yml
@@ -1574,7 +1574,7 @@
  garba:0 "踊れ！"
  garba_desc:0 "女性が踊りを通してヒンドゥー教の女神アンバジを崇拝することに起源を持ち、人々はガルバと呼ばれる新しい優雅な踊りを洗練してきた。踊りの基礎は、歌いながら、リズムに沿って円の形で手を叩くというものだ。今日、私たちの男性と女性が、この踊りを利用して、大きな情熱とともに地域社会として一緒に訪れ、絶妙に刺繍された服を着て、あらゆる機会を祝福するため集まった。若者と老人、農民と君主、イスラム教徒とヒンドゥー教徒は、共に成長し続けている。"
  jain_routes:0 "ジャイナ教との結びつき"
- jain_routes_desc:0 "ジャイナ教は古代の生活様式であり、マハーヴィーラ（紀元前599年～紀元前527年）によって現在の形となった。千年にわたり、グジャラートは、多くの聖地と寺院、宗教を後援し、ヒンドゥー教徒と共通の社会を形成している王朝時代のジャイナ教徒の社会と信仰の拠点であった。マフムード・ ガズナ（1001年）とモハンマド・ゴーリー（1175年）による東方からのイスラム教徒の侵略は、ジャイナ教の社会を圧迫し、寺院が破壊されたり、モスクに変えられただけでなく、ジャイナ教の書物も焼かれた..しかし、グジャラートのジャイナ教徒は、信仰と商取引の両方の中枢として機能することで、世界中のジャイナ教社会との関係を利用し、生き残って適応し、繁栄してきた。"
+ jain_routes_desc:0 "ジャイナ教は古代の生活様式であり、マハーヴィーラ（紀元前599年～紀元前527年）によって現在の形となった。千年にわたり、グジャラートは、多くの聖地と寺院、宗教を後援し、ヒンドゥー教徒と共通の社会を形成している王朝時代のジャイナ教徒の社会と信仰の拠点であった。マフムード・ ガズナ（1001年）とモハンマド・ゴーリー（1175年）による東方からのイスラム教徒の侵略は、ジャイナ教の社会を圧迫し、寺院が破壊されたり、モスクに変えられただけでなく、ジャイナ教の書物も焼かれた。しかし、グジャラートのジャイナ教徒は、信仰と商取引の両方の中枢として機能することで、世界中のジャイナ教社会との関係を利用し、生き残って適応し、繁栄してきた。"
  gujarati_lipi:0 "グジャラート文字"
  gujarati_lipi_desc:0 "16世紀後半、新たな文字と書体である、グジャラート文字が開発された。それは商業的な利益によって開発され、商業との関連性のためにsaraphi（銀行家）、vaniasai（商人）、またはmahajani（交易商）の文字としても知られるようになった。それは、グジャラート、カッチ、シンドを通じて急速に普及し、サンスクリット語を学び、ゾロアスター社会でアヴェスターを書くために採択され、それらを代表する言語となった。それは、多くの異なる社会のための共通の書体系を提供し、それらを結びつけるだけでなく、統一と共通の帰属意識を促進した。"
  merchant_diaspora:0 "流浪のグジャラート商人"
