--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -2451,7 +2451,7 @@
  PROV_ADJ2471:0 "ショト・エル＝ジェリド"
  PROV_ADJ2472:0 "ワルグラ"
  PROV_ADJ2473:0 "スース"
- PROV_ADJ2474:0 "Tajarhian"
+ PROV_ADJ2474:0 "タジャリ"
  PROV_ADJ2475:0 "ジャド"
  PROV_ADJ2476:0 "クミアイ"
  PROV_ADJ2477:0 "ユキ"
@@ -3055,7 +3055,7 @@
  PROV_ADJ4091:0 "ムパス"
  PROV_ADJ4092:0 "ルンド"
  PROV_ADJ4093:0 "ルエナ"
- PROV_ADJ4094:0 "ショクウェ"
+ PROV_ADJ4094:0 "チョクウェ"
  PROV_ADJ4095:0 "イシンディ"
  PROV_ADJ4096:0 "カルンドウェ"
  PROV_ADJ4097:0 "ルバ"
