--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -380,7 +380,7 @@
  mug_mission_events.1.b:0 "デカン副王を任命しよう。"
  mug_mission_events.1.b.tt:0 "§R非常に忠実な従属国として南インドの全ての州を解放します§!"
  mug_mission_events.2.t:0 "ゴールコンダ陥落"
- mug_mission_events.2.d:0 "ゴールコンダの指揮官が[Root.GetAdjective]軍に降伏する際、彼は伝説の要塞の壁の中にあった財宝を手渡しました。大きさを問わず全てのダイヤモンドにおいて、それらの多くが独自の名を名付けられていて、[Root.Capital.GetCapitalName]の財務部門へすぐに送られました。\n世界最大のダイヤモンド市場は、現在[Root.GetAdjective]の手にあります..."
+ mug_mission_events.2.d:0 "ゴールコンダの指揮官が[Root.GetAdjective]軍に降伏する際、彼は伝説の要塞の壁の中にあった財宝を手渡しました。大きさを問わず全てのダイヤモンドにおいて、それらの多くが独自の名を名付けられていて、[Root.Capital.GetCapitalName]の財務部門へすぐに送られました。\n世界最大のダイヤモンド市場は、現在[Root.GetAdjective]の手にあります…"
  mug_mission_events.2.a:0 "見事だ。"
  SELECT_SUPPRESSION_AREA:0 "§G$AREA|Y$を鎮圧地域に追加します。§!\n"
  DESELECT_SUPPRESSION_AREA:0 "§G$AREA|Y$を鎮圧地域から削除します。§!\n"
@@ -444,7 +444,7 @@
  ASSIMILATED_CULTURES:0 "同化した文化"
  ASSIMILATED_CULTURE_GROUPS:0 "同化した文化グループ"
  ASSIMILATEDCULTURE_TITLE:0 "同化文化"
- ASSIMILATEDCULTURE_SETUP:0 "文化が同化された時。"
+ ASSIMILATEDCULTURE_SETUP:0 "文化が同化された時"
  ASSIMILATEDCULTURE_HEADER:0 "同化した文化"
  ASSIMILATEDCULTURE_1:0 "$CULTURE|Y$人"
  ASSIMILATEDCULTURE_2:0 "我が政府に同化されています。"
@@ -458,7 +458,7 @@
  ASSIMILATEDCULTURE_BTN3:0 "移動"
  ASSIMILATEDCULTURE_MAP:0 ""
  ASSIMILATEDCULTUREGROUP_TITLE:0 "同化文化グループ"
- ASSIMILATEDCULTUREGROUP_SETUP:0 "文化グループが同化された時。"
+ ASSIMILATEDCULTUREGROUP_SETUP:0 "文化グループが同化された時"
  ASSIMILATEDCULTUREGROUP_HEADER:0 "同化した文化グループ"
  ASSIMILATEDCULTUREGROUP_1:0 "$CULTURE_GROUP|Y$人"
  ASSIMILATEDCULTUREGROUP_2:0 "我が政府に同化されています。"
@@ -472,7 +472,7 @@
  ASSIMILATEDCULTUREGROUP_BTN3:0 "移動"
  ASSIMILATEDCULTUREGROUP_MAP:0 ""
  NONASSIMILATEDCULTUREGROUP_TITLE:0 "文化グループはもはや同化されていません"
- NONASSIMILATEDCULTUREGROUP_SETUP:0 "文化グループがもはや同化されているとはみなされない時。"
+ NONASSIMILATEDCULTUREGROUP_SETUP:0 "文化グループがもはや同化されているとはみなされない時"
  NONASSIMILATEDCULTUREGROUP_HEADER:0 "文化グループはもはや同化されていません"
  NONASSIMILATEDCULTUREGROUP_1:0 "我々は$CULTURE_GROUP|Y$の効果を喪失しました。"
  NONASSIMILATEDCULTUREGROUP_2:0 "我が政府に同化されています。"
@@ -964,7 +964,7 @@
  RAJPUT_DESC:2 "§Yラージプート§!階級に特別な権限を与えることにより、我々は彼らの精鋭の戦士たちへのアクセスを取得します。ラージプートは平均的な部隊よりも士気が高く、補充が安上がりで、訓練ボーナスを長期間保持できます。"
  CHANGE_REFORM_CANT_AFFORD:0 "$COST|R$を持っていないため、政府改革を変更できません。"
  REFORM_PROGRESS_DEV:1 "§Y$LOCALAUTONOMY$%§!の平均州自治率から$POINTS|G$\nこの計算式は年間$BASE|+=0$に（§Y100－平均自治率§!）を乗じたものです。\n\n"
- REFORM_PROGRESS_BUILDINGS:0 "\n $POINTS|G$ from Courthouses and Town Halls"
+ REFORM_PROGRESS_BUILDINGS:0 "\n裁判所と役所から$POINTS|G$"
  COMPANY_PRICE_CALC:0 "基本：$BASE|Y0$¤\n自国の植民範囲 §G$RANGE|0$§!¤\n$MIN|0Y$¤以下になることはありません"
  CHARTER_COMPANY_WE_AT_WAR:0 "戦争時に勅許会社を求めることはできません"
  CHARTER_COMPANY_THEY_AT_WAR:0 "戦争中の国に勅許会社を求めることはできません"
