--- a/source/localisation/diplomacy_l_english.yml
+++ b/source/localisation/diplomacy_l_english.yml
@@ -872,7 +872,7 @@
  WARN_LOW_ARMY_MAINTENANCE:1 "§Y陸軍維持費が100%ではありません！§!"
  WARN_LOW_NAVY_MAINTENANCE:0 "§Y海軍維持費が100%ではありません！§!"
  SUBSIDY_OPINION_EFFECT:1 "$COUNTRY$の我々への評価は最大$MAX$まで、年あたり$YEARLY$改善すると推定されます。この改善値は$COUNTRY$の収入に依存します。"
- SUBSIDY_POWERPROJ_EFFECT:0 "1つまたは複数のライバル（$RIVALS$）の敵国に補助金を送ることにより、戦力投射を合計$TOTAL$得ます。"
+ SUBSIDY_POWERPROJ_EFFECT:0 "1つまたは複数のライバル（$RIVALS$）の敵国に補助金を与えることにより、戦力投射を合計$TOTAL$得ます。"
  MUST_WAIT_UNTIL_NEXT_ALLIANCE_OFFER:0 "別の提案を送れるようになるまで、一日待たなければなりません。"
  GUARANTEEING_THEIR_INDEPENDENCE:0 "彼らの独立を保障しています。"
  PEACE_PROVINCE_CORING_COST:0 "$COUNTRY$がすべての割譲された州を中核州にするためには §Y$ADM$§!£adm£必要です。"
