--- a/source/localisation/nw2_l_english.yml
+++ b/source/localisation/nw2_l_english.yml
@@ -73,18 +73,18 @@
  flavor_fra.EVTDESC100:1 "我々が最も愛する[Root.Monarch.GetTitle]の命に対する企みが行われた！王党派の共謀者たちは、ナポレオンが、ジョセフ・ハイドンのオラトリオ『天地創造』のオープニングを見るため、オペラに向かう途中にある、聖ニケーズ街に停められていた荷馬車に積んだ桶に爆弾を隠した。「地獄の仕掛け」と名付けられたこの爆弾は、火薬、可燃性物質、弾丸で満たされ、長い導火線がついていた。爆発は数人の見物人を殺したが、ナポレオンは無傷で生還した。"
  flavor_fra.EVTOPTA100:1 "幸運な逃避だ。"
  flavor_fra.EVTNAME101:0 "帝国への憧憬"
- flavor_fra.EVTDESC101:2 "Not satisfied with being merely First Consul, Napoléon Bonaparte is proposing that he be crowned Emperor of the French. He justifies this by claiming that restoring the hereditary succession would make it harder to restore the former kings of France to power - after all, there have been several royalist plots on his life - but there is little doubt that his prime motivation is to further his own ambitions for supreme power. The proposal has met with widespread support among the populace, who yearn for the relative stability of the pre-revolutionary years; however, diehard supporters of the Revolution express worry at this attempt to concentrate even more power in Napoléon's hands."
+ flavor_fra.EVTDESC101:2 "第一統領就任を単なる通過点として満足しなかった男がいました。その男の名はナポレオン・ボナパルト。彼はフランス皇帝への即位を画策しています。世襲を復活させれば以前のフランス王たちの復権が難しくなるだろう、と彼は主張しており、自身のフランス王の戴冠を正当化していますーどっちみち、彼の人生の中で、王党派の陰謀と思われるものがいくつか現れることになるのですがねーとはいえ、最大の動機は、最高権力に対するさらなる自分の野心のためだったことは間違いないでしょう。この提案は、革命以前の相対的に安定していた時代を切望する人々に幅広く支持されました。しかし、革命を熱烈に支持する者たちは、この試みによって、さらに大きな権力がナポレオンの手中に入り、権力が集中することについて懸念を表明しています。"
  flavor_fra.EVTOPTA101:0 "フランスは帝国となる！"
  flavor_fra.EVTOPTB101:0 "革命は継続しなければならない！"
  flavor_fra.EVTNAME110:0 "革命共和国"
  flavor_fra.EVTDESC110:1 "[Root.GetName]の戦争は、人々の終わりのない流出である。共和国の戦争は、重税、徴兵および死者の増加という形で、庶民はますます大きな犠牲を払わなければならなかったため、革命によって状況が改善されることを望んでいた人々の多くは現在すでに亡くなり、政府の変更が国に平和をもたらすと考えている人々は共和国への信仰を失っているようだ。"
  flavor_fra.EVTOPTA110:0 "共和国は生き残る！"
  flavor_fra.EVTDESC111:1 "終わりなき戦争は[Root.GetName]の人口を使い果たした。革命を支持した人々は、一般大衆に壊滅的な影響を及ぼし続けている絶え間ない戦争状態に身をさらすのではなく、彼らの立場を改善するよう努力するべきだと不平を言う。その結果、多くの人々が共和国への信仰を失っている。"
- flavor_fra.EVTDESC112:0 "政府の変更は、財務管理上の不始末を増やしただけに思われます。[Root.GetName]共和国が破産を宣告して以来、多くの元支持者たちは、革命以前と比べて良くなったことがあるかどうか自問自答しています..."
+ flavor_fra.EVTDESC112:0 "政府の変更は、財務管理上の不始末を増やしただけに思われます。[Root.GetName]共和国が破産を宣告して以来、多くの元支持者たちは、革命以前と比べて良くなったことがあるかどうか自問自答しています…"
  flavor_fra.EVTDESC113:1 "国家債務は国民にとって大きな問題だ。国の財政は政府の変更前よりも良い形にはなっていないようで、多くの人々は費用のかかる破産や増税を恐れている。共和国への信仰は弱まり、多くの人が古い君主主義のやり方に戻っている。"
  flavor_fra.EVTDESC114:1 "革命は動きを止めてしまったようだ。国の4分の1以上に反乱が広がっているため、共和党政府が我が国の問題に対する答えを持っていると信じている人はほとんどいない。"
- flavor_fra.EVTDESC115:1 "Those who thought that the Revolution and the Republic would be the answers to the instability of [Root.GetName] are becoming more and more disillusioned. The ever-increasing turmoil afflicting our nation is causing widespread suffering among the peasantry and upper classes alike. Support is growing for a strong leader to take over control and enforce an end to the chaos."
- flavor_fra.EVTDESC116:1 "The People's faith in the Republic is declining. They accuse us of putting too little effort into mending the problems of the old regime and claim that things were better off for them before the Revolution. Already, dissidents are rallying support behind those who wish to reverse our course and place a monarch on the [Root.GetAdjective] throne."
+ flavor_fra.EVTDESC115:1 "革命及び共和国化が[Root.GetName]の不安定性に対する解答となると思っていた人たちはますます幻滅しています。自国を悩ます止めどもない混乱は国中に広まり、農民も上流階級も変わらず苦しみを引き起こしていいます。強力な指導者が支配権を奪い、混乱を終わらせることへの支持が高まっています。"
+ flavor_fra.EVTDESC116:1 "国民の共和国に対する信頼は低下しています。国民は、旧体制が抱えていた問題を改善する努力をほとんどしていないと非難し、革命前の方が状況は良かったと訴えています。すでに反体制派は、私たちの方針を転換し、[Root.GetAdjective]の王位に君主を据えたいと思っている者たちの支持を集めています。"
  flavor_fra.EVTOPTA116:0 "共和国に疑問を呈するとは大胆なやつだ！"
  flavor_fra.EVTOPTB116:1 "公的救済事業を増やす。"
  flavor_fra.EVTOPTC116:0 "外交費を削減する。"
@@ -231,7 +231,7 @@
  NAJADAT:0 "ナジャダット"
  AZRAQI:0 "アズラキー"
  construct_kiel_canal_title:0 "キール運河を建設"
- construct_kiel_canal_desc:0 "ユトランド半島を横切ってバルト海と北海をつなげる運河を建設するのは、まさに超巨大な工事となるであろうがその完成は我々の船の移動時間を大幅に削るだろう。しかしそのプロジェクトは費用が莫大で、しかも別の問題も生まれてくるだろう..."
+ construct_kiel_canal_desc:0 "ユトランド半島を横切ってバルト海と北海をつなげる運河を建設するのは、まさに超巨大な工事となるであろうがその完成は我々の船の移動時間を大幅に削るだろう。しかしそのプロジェクトは費用が莫大で、しかも別の問題も生まれてくるだろう…"
  construct_suez_canal_title:0 "スエズ運河を建設"
  construct_suez_canal_desc:0 "地中海を紅海につなぐためにシナイ半島とアフリカを分かつ運河を切り開くことは、本当に大きな仕事です。完成の暁には、我々の船の移動時間は大幅に短縮されるだろう。しかしプロジェクトは非常に高価で、しかも途中で追加の問題に遭遇するかもしれません…"
  construct_panama_canal_title:0 "パナマ運河を建設"
@@ -331,7 +331,7 @@
  trade_company_events.EVTOPTA5:0 "彼らに引き下がらせる"
  trade_company_events.EVTOPTB5:0 "彼らの行動を支持する"
  trade_company_events.EVTNAME6:0 "[Root.GetName]虐殺"
- trade_company_events.EVTDESC6:2 "A conspiracy has been discovered in [Root.GetName]! Some disgruntled foreign employees of [Root.TradeCompany.GetName] together with traders from [enemy_country.GetUsableName], led by none other than a governor of [target_province.TradeCompany.GetName], planned to storm and seize the local fort and murder the local governor in an attempt to undercut the trade company's business. All conspirators were convicted, sentenced to death and beheaded by the order of the governor. This incident has naturally stirred up quite the reaction though..."
+ trade_company_events.EVTDESC6:2 "陰謀が[Root.GetName]で発覚しました！一部の不満を抱いた[Root.TradeCompany.GetName]の外国人従業員と、他ならぬ[target_province.TradeCompany.GetName]の知事に率いられていた[enemy_country.GetUsableName]からの交易商が共謀して、地元の砦を襲撃して交易会社の事業を圧迫しようとしている地元の知事を殺害しようと計画しました。すべての共謀者は有罪判決を受け、死刑を宣告され、知事の命令で斬首されました。当然ながら、この事件はかなり波紋を呼んでいます…"
  trade_company_events.EVTOPTA6:0 "知事を投獄する"
  trade_company_events.EVTOPTB6:0 "知事を支持する"
  trade_company_events.EVTNAME7:0 "[From.GetName]虐殺"
