--- a/source/localisation/privateers_l_english.yml
+++ b/source/localisation/privateers_l_english.yml
@@ -69,7 +69,7 @@
  privateers.13.t:0 "商人は我らに戦争の約束を思い出させた"
  privateers.13.d:0 "余が外国の私掠船行為に被害を被った交易商に、その不誠実な行いに手を貸す国家へ宣戦布告することを約束して三年がたった。今、彼らは我らの約束を再確認している。過去三年にわたって艦隊の用意をする支援を提供したのだからと、彼らは約束の履行と攻撃を要求している。"
  privateers.13.a:0 "計画通りに攻撃を始めよう。"
- privateers.13.b:0 "あの時はふさわしく思えた、しかし今となっては余りに危険すぎる..."
+ privateers.13.b:0 "あの時はふさわしく思えた、しかし今となっては余りに危険すぎる…"
  privateers.13.c:0 "海賊行為は減少した。今更開戦する理由なぞない。"
  privateers.14.t:0 "破棄された約束への商人達の激怒"
  privateers.14.d:0 "5年前、我が国の交易路に災い成す私掠船を支援して私戦を既に行っている悪辣な国家に対する開戦の布告を約束した。しかしながら、戦争に向けた船舶建造の資源提供を受けたにもかかわらず、我が国の商人は余が協定の履行に失敗したとみなした。彼らは怒り狂い急激な政策の転換を訴え余の権威を傷つけた。"
